[package]
name = "appconfig"
version = "0.1.0"
authors = ["sumibi-yakitori <nekosoft360@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
dirs-next = "2.0"
